Use common.py and common.js from common web.

--- a/html/index.html
+++ b/html/index.html
@@ -45,7 +45,7 @@
 			</div>
 		</div>
 		<div id="raw_tab"></div>
-		<div id="message_panel"></div>
+		<div id="error_message_panel"></div>
 	</div>
 	<div id="graph_tab">
 		<div id="readings_graph"></div>
