--- a/html/index.html
+++ b/html/index.html
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Meter Reading</title>
 <link href="meters.css" rel="stylesheet" type="text/css">
-<link href="c3/c3.css" rel="stylesheet" type="text/css">
-<link href="jquery/ui/jquery-ui.min.css" rel="stylesheet" type="text/css">
+<link href="lib/c3.min.css" rel="stylesheet" type="text/css">
+<link href="lib/jquery-ui.min.css" rel="stylesheet" type="text/css">
 <script src="common.js"></script>
 <script src="meters.js"></script>
-<script src="jquery/jquery-2.1.4.min.js"></script>
-<script src="jquery/ui/jquery-ui.min.js"></script>
-<script src="d3/d3.min.js" charset="utf-8"></script>
-<script src="c3/c3.min.js"></script>
+<script src="lib/jquery.min.js"></script>
+<script src="lib/jquery-ui.min.js"></script>
+<script src="lib/d3.min.js" charset="utf-8"></script>
+<script src="lib/c3.min.js"></script>
 </head>
 
 <body onload="meters.init_page()">
