--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
 		<div id="new_tab">
 			<br>
 			<div id="form_parent">
-				<form id="new_reading_form" class="center">
+				<form id="new_reading_form">
 					Date<input type="text" name="date" value="" size="10" required>
 					&nbsp;Time<input type="text" name="time" value="" size="5" required>
 					<br><br>Gas<br>
@@ -45,6 +45,12 @@
 			</div>
 		</div>
 		<div id="raw_tab"></div>
+		<div id="last_tab">
+			<div id="form_parent">
+				<div id="last_reading"></div>
+				</br><button onclick="meters.delete_last(1); return false;">Delete</button>
+			</div>
+		</div>
 		<div id="error_message_panel"></div>
 	</div>
 	<div id="graph_tab">
