Added configurable api directory.

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
 <link href="lib/jquery-ui.min.css" rel="stylesheet" type="text/css">
 <script src="common.js"></script>
 <script src="meters.js"></script>
+<script src="meters_config.js"></script>
 <script src="lib/jquery.min.js"></script>
 <script src="lib/jquery-ui.min.js"></script>
 <script src="lib/d3.min.js" charset="utf-8"></script>
