Removed reference to specific meters, instead configure at run-time.

--- a/html/index.html
+++ b/html/index.html
@@ -37,10 +37,7 @@
 				<form id="new_reading_form">
 					Date<input type="text" name="date" value="" size="10" required>
 					&nbsp;Time<input type="text" name="time" value="" size="5" required>
-					<br><br>Gas<br>
-					<input type="text" name="gas" value="" required>
-					<br><br>Electricity<br>
-					<input type="text" name="electricity" value="" required>
+					<div id="reading_values"></div>
 					<br><br>
 					<input type="button" value="Add New Reading" onclick="meters.add_new_reading()">
 				</form>
